News UAT/force-app/main/default/objects/NXX2_InboundEmailConfig__mdt/NXX2_InboundEmailConfig__mdt.object-meta.xml
<CustomObject>
    <description>This configuration will be used to identify the inbound mail of client which are specific to Purchase Order approval or rejection.</description>
    <label>NXX2_InboundEmailConfig</label>
    <pluralLabel>NXX2_InboundEmailConfigs</pluralLabel>
</CustomObject>