News UAT/force-app/main/default/objects/NXX2_InboundEmailConfig__mdt/fields/EmailBodyTextForApproval__c.field-meta.xml
<CustomField>
    <fullName>EmailBodyTextForApproval__c</fullName>
    <label>EmailBodyTextForApproval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>