News UAT/force-app/main/default/objects/NXX2_InboundEmailConfig__mdt/fields/EmailBodyTextForRequestChange__c.field-meta.xml
<CustomField>
    <fullName>EmailBodyTextForRequestChange__c</fullName>
    <defaultValue>&#39;REQUIRES CHANGES&#39;</defaultValue>
    <label>EmailBodyTextForRequestChange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>