News UAT/force-app/main/default/objects/NXX2_InboundEmailConfig__mdt/fields/TaskRecordType__c.field-meta.xml
<CustomField>
    <fullName>TaskRecordType__c</fullName>
    <label>TaskRecordType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>