News UAT/force-app/main/default/objects/NXX2_InboundEmailConfig__mdt/fields/TaskSubject__c.field-meta.xml
<CustomField>
    <fullName>TaskSubject__c</fullName>
    <label>TaskSubject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>